# media-scribe-workflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_LOG.md  INSTALL_FILES.md  README.md  pyproject.toml  run_video_chapter_editor.py  video_chapter_editor.spec
.github/workflows/: release.yml
assets/: icon.icns
dev_logs/: DEVELOPMENT.md  DEVELOPMENT_LOG.md  DEVELOPMENT_LOG_as_of_2025-12-29.md  conversation_2025-12-23.md  conversation_2025-12-24.md  conversation_2025-12-25.md  conversation_2025-12-26.md  conversation_2025-12-27.md  conversation_2025-12-28.md  conversation_2025-12-29.md  conversation_2025-12-30.md  conversation_2025-12-31.md  conversation_2026-01-01.md  conversation_2026-01-03.md  conversation_2026-01-04.md  conversation_2026-01-05.md  conversation_2026-01-06.md  conversation_2026-01-07.md  conversation_2026-01-08.md  conversation_2026-01-09.md  conversation_2026-01-10.md
dev_logs_tex/: .env  convert_dialog_to_latex.py  dialog_2025-12-23.tex  dialog_2025-12-23_full.tex  dialog_2025-12-24.tex  dialog_2025-12-24_full.tex  dialog_2025-12-25_full.tex  dialog_2025-12-26_full.tex  dialog_2025-12-27_full.tex  dialog_2025-12-28_full.tex  dialog_2025-12-29_full.tex  dialog_2025-12-30_full.tex  dialog_2025-12-31_full.tex  dialog_2026-01-01_full.tex  dialog_2026-01-03_full.tex  dialog_2026-01-04_full.tex  dialog_2026-01-05_full.tex  dialog_2026-01-06_dialogue.tex  dialog_2026-01-06_full.tex  dialog_2026-01-07_vce_refactoring.tex  dialog_2026-01-08_complete.tex  dialog_2026-01-08_design.tex  dialog_2026-01-08_finalization.tex  dialog_2026-01-08_full.tex  dialog_app_sales_strategy.tex  dialog_vce_complete.tex  dialog_vce_development_complete.tex  dialog_vce_development_detailed.tex  dialog_vce_development_full_history.tex  dialog_vce_development_main.tex  dialog_vce_development_unified.tex  dialog_vce_devlogs_comprehensive.tex  dialog_vce_unified.tex  pad_add_sources_to_existing_v2.spd  pad_handle_initial_drop_v2.spd  pad_input_processing.spd  pad_load_source_media.spd  pad_on_files_dropped_v2.spd  pad_source_manager_handle_add_sources.spd  pad_source_manager_handle_initial_load.spd  (+10 more)
docs/: architecture.md  dev-log-ui-redesign-2025-12-29.md  gui-refactoring.md  implementation_graph.md  index.html  installation.md  mermaid-viewer.html  workflow-comparison.md  workflow-diagrams.md
docs/advanced/: claude-commands.md  luatex-docker.md  my-setup.md  whisper-remote.md
docs/design/: transcription-workflow-design.md
examples/: transcription_workflow.template.yaml  transcription_workflow.yaml
media_scribe_workflow/: report_workflow.py
profiles/: horn_lesson.yaml  meeting_report.yaml  orchestral_rehearsal.yaml
rehearsal_workflow/: __init__.py  video_chapter_editor.py
tests/: __init__.py  test_main_workspace.py  test_mixins.py  test_styles.py  test_video_properties.py  test_workers_utils.py  test_youtube_mixin.py
tools/: PadAlignedRenderer.java  PadCLI.java
(+61 files in other folders)
