[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rehearsal-workflow"
version = "2.1.15"
description = "リハーサル動画から字幕・チャプター付き動画を生成するワークフローツール"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mashi727"}
]
keywords = ["rehearsal", "video", "chapter", "subtitle", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "PySide6>=6.6.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mashi727/rehearsal-workflow"
Repository = "https://github.com/mashi727/rehearsal-workflow"

[project.scripts]
video-chapter-editor = "rehearsal_workflow.ui.app:main"
report-workflow = "rehearsal_workflow.report_workflow:main"

[tool.hatch.build.targets.wheel]
packages = ["rehearsal_workflow"]
