[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-scribe-workflow"
version = "2.1.27"
description = "メディアファイルから字幕・チャプター付き動画を生成するワークフローツール"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mashi727"}
]
keywords = ["media", "scribe", "video", "chapter", "subtitle", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "PySide6>=6.6.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "static-ffmpeg>=2.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mashi727/media-scribe-workflow"
Repository = "https://github.com/mashi727/media-scribe-workflow"

[project.scripts]
video-chapter-editor = "media_scribe_workflow.ui.app:main"
scribe-workflow = "media_scribe_workflow.scribe_workflow:main"

[tool.hatch.build.targets.wheel]
packages = ["media_scribe_workflow"]
